--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 :root {
   --color-beige: #ffede5;
-   --color-flower-one: #ffede5;
-   --color-flower-two: #ffede5;
+   --color-flower-one: transparent;
+   --color-flower-two: transparent;
+     --color-flower-three: transparent;
+   --color-flower-four: transparent;
 }
 
 html {
@@ -84,6 +86,7 @@ body {
   top: -300px;
   right: -300px;
    transition: border-color 2s cubic-bezier(.29, 1.01, 1, -0.68);
+    pointer-events: none;
 }
 .background-flower-two {
   height: 900px;
@@ -95,7 +98,19 @@ body {
   top: -450px;
   right: -450px;
   transition: border-color 2s cubic-bezier(.29, 1.01, 1, -0.68) 1s;
+    pointer-events: none;
 }
+
+.alt{
+  border: 299px dotted var(--color-flower-three);
+
+}
+.alt2 {
+
+  border: 449px dotted var(--color-flower-four);
+
+}
+
 
 .container {
   background: var(--color-beige);
@@ -108,6 +123,7 @@ body {
   border-radius: 50%;
   display: flex;
   align-items: center;
+justify-content: center;
 }
 
 
@@ -138,6 +154,10 @@ body {
 
 #three {
   grid-area: 3 / 4;
+}
+#three:hover {
+--color-flower-three: #eaa5ff;
+--color-flower-four: #a8c8ff;
 }
 
 #four {
